--- a/os/Makefile
+++ b/os/Makefile
@@ -43,6 +43,11 @@ kernel:
 	@cargo build $(MODE_ARG)
 	@rm src/linker.ld
 
+test:
+	@echo Platform: $(BOARD)
+	@cp src/linker-$(BOARD).ld src/linker.ld
+	@cargo test $(MODE_ARG)
+	@rm src/linker.ld
 clean:
 	@cargo clean
 
