--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -8,6 +8,9 @@ riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
 lazy_static = { version = "1.5.0", features = ["spin_no_std"]}
 log = "0.4.22"
 sbi-rt = { version = "0.0.3", features = ["legacy"]}
+buddy_system_allocator = "0.11.0"
+bitflags = "2.8.0"
+xmas-elf = "0.9.1"
 #bootloader = "0.11.9"
 
 [profile.dev]
